[gd_scene load_steps=10 format=3 uid="uid://dou8o3r5dv6y0"]

[ext_resource type="Script" path="res://scenes/world/world.gd" id="1_gvw3r"]
[ext_resource type="PackedScene" uid="uid://c13xh5p7whqy8" path="res://scenes/world/maps/main_map.scn" id="2_e4wuq"]
[ext_resource type="PackedScene" uid="uid://c42dfx351du8k" path="res://scenes/player/player.tscn" id="3_d4wpd"]
[ext_resource type="PackedScene" uid="uid://bis15ccgjlfvp" path="res://scenes/aaron/aaron.tscn" id="4_q14xc"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_bgona"]
ground_bottom_color = Color(0.854902, 0.521569, 0.537255, 1)

[sub_resource type="Sky" id="Sky_smxms"]
sky_material = SubResource("ProceduralSkyMaterial_bgona")

[sub_resource type="Environment" id="Environment_10cjy"]
background_mode = 2
sky = SubResource("Sky_smxms")
ambient_light_sky_contribution = 0.8
ambient_light_energy = 0.2
tonemap_mode = 2
fog_enabled = true
fog_light_energy = 0.02
fog_density = 0.1

[sub_resource type="Animation" id="Animation_sl4mr"]
resource_name = "show_text"
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Info:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 5.4, 6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(5, -50), Vector2(5, 5), Vector2(5, 5), Vector2(5, -50)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vboe2"]
_data = {
"show_text": SubResource("Animation_sl4mr")
}

[node name="World" type="Node3D"]
script = ExtResource("1_gvw3r")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_10cjy")

[node name="MainMap" parent="." instance=ExtResource("2_e4wuq")]

[node name="Player" parent="." instance=ExtResource("3_d4wpd")]

[node name="Enemy" type="Node3D" parent="."]

[node name="Aaron" parent="Enemy" instance=ExtResource("4_q14xc")]
transform = Transform3D(-0.980226, 0, -0.19788, 0, 1, 0, 0.19788, 0, -0.980226, 4.8125, 0.242754, 17.4503)

[node name="FPS" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -44.0
offset_top = 4.0
offset_right = -7.0
offset_bottom = 39.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 20
text = "FPS"
horizontal_alignment = 2

[node name="Info" type="RichTextLabel" parent="."]
offset_left = 5.0
offset_top = -50.0
offset_right = 545.0
offset_bottom = 1.0
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
fit_content = true

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="AddModifier" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vboe2")
}

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="AddModifier" to="." method="_on_add_modifier_timeout"]
